@@ -1,52 +1,50 @@
 package gwydion0917.gwycraft.data;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import gwydion0917.gwycraft.enums.EnumGemType;
 import gwydion0917.gwycraft.registration.ModBlocks;
 import gwydion0917.gwycraft.registration.ModItems;
-import net.minecraft.block.Block;
-import net.minecraft.data.*;
-import net.minecraft.data.loot.BlockLootTables;
-import net.minecraft.item.DyeColor;
-import net.minecraft.item.Item;
-import net.minecraft.loot.*;
-import net.minecraft.util.ResourceLocation;
-import net.minecraftforge.fml.RegistryObject;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.world.flag.FeatureFlags;
+import net.minecraft.world.item.DyeColor;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
+import net.minecraftforge.registries.RegistryObject;
 
-import java.util.*;
-import java.util.function.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
- * Block loot table generator for GwyCraft 1.16.5.
- * BlockLootTables is in net.minecraft.data.loot (not net.minecraft.data).
+ * Block loot table generator for GwyCraft 1.20.1.
+ * Key changes from 1.16.5:
+ * - BlockLootTables → BlockLootSubProvider
+ * - BlockLootSubProvider(Set<Item>, FeatureFlagSet) constructor
+ * - LootTableProvider(PackOutput, Set<ResourceLocation>, List<SubProviderEntry>)
+ * - addTables() → generate() — the protected method is now generate()
+ * - LootParameterSets → LootContextParamSets
  */
 public class ModLootTableProvider extends LootTableProvider {
 
-    public ModLootTableProvider(DataGenerator gen) {
-        super(gen);
-    }
-
-    @SuppressWarnings("unchecked")
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>,
-            LootParameterSet>> getTables() {
-        Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootParameterSet> pair =
-                Pair.of(GwycraftBlockLoot::new, LootParameterSets.BLOCK);
-        return ImmutableList.of(pair);
-    }
-
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationTracker tracker) {
-        map.forEach((loc, table) -> LootTableManager.validate(tracker, loc, table));
+    public ModLootTableProvider(PackOutput output) {
+        super(output, Set.of(), List.of(
+                new SubProviderEntry(GwycraftBlockLoot::new, LootContextParamSets.BLOCK)
+        ));
     }
 
     // ── Inner block loot table class ─────────────────────────────────────────
 
-    public static class GwycraftBlockLoot extends BlockLootTables {
+    public static class GwycraftBlockLoot extends BlockLootSubProvider {
+
+        public GwycraftBlockLoot() {
+            super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+        }
 
         @Override
-        protected void addTables() {
+        protected void generate() {
             // Gem ores drop their gem (silk touch drops the ore block)
             for (EnumGemType gem : EnumGemType.values()) {
                 Block oreBlock = ModBlocks.GEM_ORE.get(gem).get();
@@ -60,11 +58,13 @@ public class ModLootTableProvider extends LootTableProvider {
             selfDropDyeMap(ModBlocks.DYED_STONE);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_STONE);
             selfDropDyeMap(ModBlocks.DYED_STONE_PAVER);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_STONE_PAVER);
             selfDropDyeMap(ModBlocks.DYED_BOOKCASE);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_BOOKCASE);
             selfDropDyeMap(ModBlocks.DYED_BRICK);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_BRICK);
             selfDropDyeMap(ModBlocks.DYED_BRICK_PAVER);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_BRICK_PAVER);
             selfDropDyeMap(ModBlocks.DYED_CLAY);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_CLAY);
             selfDropDyeMap(ModBlocks.DYED_GLASS);
@@ -74,6 +74,9 @@ public class ModLootTableProvider extends LootTableProvider {
             selfDropDyeMap(ModBlocks.DYED_MUD_BRICK);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_MUD_BRICK);
             selfDropDyeMap(ModBlocks.DYED_MUD_BRICK_PAVER);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_MUD_BRICK_PAVER);
+            selfDropDyeMap(ModBlocks.DYED_LOG);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_LOG);
             selfDropDyeMap(ModBlocks.DYED_PLANK);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_PLANK);
             selfDropDyeMap(ModBlocks.DYED_SAND);
@@ -87,11 +90,37 @@ public class ModLootTableProvider extends LootTableProvider {
             selfDropDyeMap(ModBlocks.DYED_STONE_BRICK);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_STONE_BRICK);
             selfDropDyeMap(ModBlocks.DYED_STONE_BRICK_PAVER);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_STONE_BRICK_PAVER);
             selfDropDyeMap(ModBlocks.DYED_COBBLESTONE);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_COBBLESTONE);
             selfDropDyeMap(ModBlocks.DYED_COBBLESTONE_PAVER);
+            selfDropDyeMap(ModBlocks.GLOWY_DYED_COBBLESTONE_PAVER);
             selfDropDyeMap(ModBlocks.DYED_COBBLESTONE_WALL);
             selfDropDyeMap(ModBlocks.GLOWY_DYED_COBBLESTONE_WALL);
+            selfDropDyeMap(ModBlocks.PLAIN_GREEK_BOTTOM);
+            selfDropDyeMap(ModBlocks.PLAIN_GREEK_PILLAR);
+            selfDropDyeMap(ModBlocks.PLAIN_GREEK_TOP);
+            selfDropDyeMap(ModBlocks.PLAIN_PILLAR_BOTTOM);
+            selfDropDyeMap(ModBlocks.PLAIN_PILLAR);
+            selfDropDyeMap(ModBlocks.PLAIN_PILLAR_TOP);
+            selfDropDyeMap(ModBlocks.PLAIN_WIDE_PILLAR_BOTTOM);
+            selfDropDyeMap(ModBlocks.PLAIN_WIDE_PILLAR);
+            selfDropDyeMap(ModBlocks.PLAIN_WIDE_PILLAR_TOP);
+            selfDropDyeMap(ModBlocks.GREEK_PILLAR_BOTTOM);
+            selfDropDyeMap(ModBlocks.GREEK_PILLAR_TOP);
+            selfDropDyeMap(ModBlocks.GREEK_WIDE_PILLAR_BOTTOM);
+            selfDropDyeMap(ModBlocks.GREEK_WIDE_PILLAR_TOP);
+            selfDropDyeMap(ModBlocks.GREEK2_PILLAR_BOTTOM);
+            selfDropDyeMap(ModBlocks.GREEK2_PILLAR_TOP);
+            slabDropDyeMap(ModBlocks.PLAIN_SLAB);
+            slabDropDyeMap(ModBlocks.GREEK_SLAB);
+            selfDropDyeMap(ModBlocks.FANCY_BOTTOM);
+            selfDropDyeMap(ModBlocks.FANCY_TOP);
+            selfDropDyeMap(ModBlocks.FANCY_GREEK_BOTTOM);
+            selfDropDyeMap(ModBlocks.FANCY_GREEK_TOP);
+            selfDropDyeMap(ModBlocks.FANCY_WIDE_BOTTOM);
+            selfDropDyeMap(ModBlocks.FANCY_WIDE_TOP);
+            slabDropDyeMap(ModBlocks.FANCY_SLAB);
 
             // Torches: floor drops itself; wall torch drops floor torch item
             for (DyeColor c : DyeColor.values()) {
@@ -105,6 +134,12 @@ public class ModLootTableProvider extends LootTableProvider {
         private void selfDropDyeMap(Map<DyeColor, RegistryObject<Block>> family) {
             for (RegistryObject<Block> ro : family.values()) {
                 dropSelf(ro.get());
+            }
+        }
+
+        private void slabDropDyeMap(Map<DyeColor, RegistryObject<Block>> family) {
+            for (RegistryObject<Block> ro : family.values()) {
+                add(ro.get(), createSlabItemTable(ro.get()));
             }
         }
 
